package com.plcoding.cleanarchitecturenoteapp.core.util

object TestTags {
    const val ORDER_SECTION = "order_section"
    const val TITLE_TEXT_FIELD = "title_text_field"
    const val CONTENT_TEXT_FIELD = "content_text_field"
    const val NOTE_ITEM = "note_item"
}